fix token for opd list